--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
     <title>Index</title>
 </head>
 <body>
-Index
+  <p><h1>Upload Speech File For Testing (.wav only)</h1></p>
+  <form enctype="multipart/form-data" action="/upload" method="post">
+    File: <input type="file" name="file1" />
+    <br />
+    <br />
+    <input type="submit" value="upload" />
 </body>
 </html>
