re-enabling the xsrf setting

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     File: <input type="file" name="file1" />
     <br />
     <br />
+    {% module xsrf_form_html() %}
     <input type="submit" value="upload" />
 </body>
 </html>
