--- a/static/record.css
+++ b/static/record.css
@@ -39,3 +39,14 @@ button[disabled] {
     border-color: rgb(83, 81, 81);
     color: rgb(139, 133, 133);
 }
+
+#container {
+    padding: 1em 2em;
+}
+#preview {
+    border: 1px solid rgb(15, 158, 238);
+    height: 240px;
+    max-width: 100%;
+    vertical-align: top;
+    width: 320px;
+}
