working record example

--- a/templates/record.html
+++ b/templates/record.html
@@ -21,6 +21,9 @@
 
         <div id="container"></div>
     </section>
+    <form id="xsrf">
+    {% module xsrf_form_html() %}
+    </form>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="/static/audio.js"></script>
 </body>
