--- a/static/record.css
+++ b/static/record.css
@@ -1,43 +1,17 @@
-body,
 html {
-    background: black;
+    position: relative;
+    min-height: 100%;
+}
+
+body {
     color: white;
     text-align: center;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
 
-button,
-a {
-    background: -webkit-gradient(linear, 50% 0, 50% 100%, color-stop(0%, #fff), color-stop(100%, #eaeaea));
-    background: -webkit-linear-gradient(top, #fff, #eaeaea);
-    background: -moz-linear-gradient(top, #fff, #eaeaea);
-    background: -o-linear-gradient(top, #fff, #eaeaea);
-    background: linear-gradient(top, #fff, #eaeaea);
-    border: 1px solid white;
-    border-radius: 5px;
-    color: #4f4f4f;
-    padding: 8px 15px;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
-button:hover,
-a:hover,
-button:active,
-a:active,
-button:focus,
-a:focus {
-    -moz-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-    background: #303030;
-    border-color: white;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.5);
-    color: white;
-}
-
-button[disabled] {
-    background: transparent;
-    border-color: rgb(83, 81, 81);
-    color: rgb(139, 133, 133);
+#topssection {
+    color: Green;
 }
 
 #container {
@@ -53,13 +27,27 @@ button[disabled] {
 
 #recordedText {
     color: #000000;
-    # position: relative;
     background-color: beige;
-    height: 300px;
-    # float: right;
-    # top: -260px;
-    # right: 200px;
+    height: 200px;
     width: 50%;
     margin: 0 auto;
     margin-top: 20px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #000000;
+}
+
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.container .text-muted {
+    float: left;
+    margin: 20px 0;
 }
